--- a/assets/styles/module.css
+++ b/assets/styles/module.css
@@ -178,6 +178,8 @@ footer {
 	height: 79px;
 	display: flex;
 	gap: 60px;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .footer_col_3 {
