--- a/assets/styles/responsive/media.css
+++ b/assets/styles/responsive/media.css
@@ -121,6 +121,15 @@
         width: auto;
     }
 
+    .footer_cont {
+        width: 80%;
+        margin: 60px auto;
+    }
+
+    .footer_pre {
+        width: 100%;
+    }
+
     .footer_left {
         display: none;
     }
@@ -139,6 +148,7 @@
     .footer_nav ul {
         height: auto;
         width: 100%;
+        margin: 0 auto;
     }
 
     .footer_ul li:first-of-type {
@@ -149,10 +159,31 @@
         width: 100%;
         height: auto;
         gap: 50px;
+        margin: 0 auto;
     }
 
     .footer_cont {
         height: auto;
+    }
+
+    .footer_ul li:first-of-type {
+        padding: 25px;
+    }
+
+    .footer_nav .footer_ul {
+        height: 64px;
+        overflow: hidden;
+        border: 1.5px solid gray;
+        border-left: 0;
+        border-right: 0;
+    }
+
+    .footer_nav {
+        gap: unset;
+    }
+
+    .footer_div {
+        gap: unset;
     }
 
 }
@@ -247,26 +278,6 @@
         width: 100%;
     }
 
-    .footer_nav {
-        gap: unset;
-    }
-
-    .footer_div {
-        gap: unset;
-    }
-
-    .footer_ul li:first-of-type {
-        padding: 25px;
-    }
-
-    .footer_nav .footer_ul {
-        height: 64px;
-        overflow: hidden;
-        border: 1.5px solid gray;
-        border-left: 0;
-        border-right: 0;
-    }
-
 }
 
 
@@ -321,7 +332,7 @@
 @media only screen and (max-width: 767.4px) {
 
     .head_pre_cont {
-        margin-left: 110px;
+        margin-left: 7.6%;
     }
 
     .head_main {
@@ -353,13 +364,13 @@
     }
 
     .hero .search-field {
-        width: 510px;
+        width: 100%;
         margin-bottom: 15px;
 
     }
 
     .hero .search-btn {
-        width: 510px;
+        width: 100%;
     }
 
     .aft_form {
@@ -391,13 +402,17 @@
     .domain_main {
         flex-direction: column;
         height: auto;
-        gap: 15px;
+        gap: 10px;
         margin-top: 30px;
     }
 
     .dom {
         width: 100%;
-        height: 250px;
+        padding: 30px;
+    }
+
+    .dom h2 {
+        margin-top: 0px;
     }
 
     .dom h2 p {
@@ -411,10 +426,160 @@
     }
 
     .dom h4 p {
-        fo
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .dom_form {
+        margin: 0 auto;
+        width: 100%;
+        position: unset;
     }
 
     .dom_search {
+        width: 100%;
+    }
+
+    .right_main {
+        height: 140px;
+    }
+
+    .right_main h4 p  {
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .right_main h6 p {
+        font-size: 14px;
+        line-height: 18px;
+    }
+
+    .right_hd h2 p {
+        font-size: 30px;
+        line-height: 36px;
+    }
+
+    .right_hd h3 p {
+        font-size: 22px;
+        line-height: 27px;
+    }
+
+    .right_main  {
+        width: 510px;
+    }
+
+
+    .priv_cont {
+        height: auto;
+    }
+
+    .priv_bd {
+        width: 530px;
+        height: auto;
+        flex-direction: column;
+    }
+
+    .priv_main {
+        width: 100%;
+        height: 405px;
+    }
+
+    .priv_hd {
+        width: 400px;
+        margin: 0 auto;
+    }
+
+    .priv_hd h3 p {
+        font-size: 22px;
+        line-height: 27px;
+    }
+
+    .help_head {
+        width: 450px;
+    }
+
+    .help_head h2 p {
+        font-size: 30px;
+        line-height: 36px;
+    }
+
+    .help_head h3 p {
+        font-size: 22px;
+        line-height: 27px;
+    }
+
+    .quest_bd {
+        width: auto;
+    }
+
+    .quest_bd h3 p {
+        font-size: 22px;
+        line-height: 27px;
+    }
+
+    .quest_main {
+        width: 520px;
+    }
+
+    .quest_main h4 p {
+        font-size: 18px;
+        line-height: 18px;
+    }
+
+    .quest_main h6 p {
+        font-size: 14px;
+        line-height: 18px;
+    }
+
+    .aft_quest {
+        width: 520px;
+    }
+
+}
+
+/*
+=================================================================================
+    max width of 574px
+=================================================================================
+*/
+
+@media only screen and (max-width: 574px) {
+
+    .head_pre_cont {
+        margin: 0;
+    }
+
+    .head_main {
+        width: 99%;
+    }
+
+
+    .hero {
+        height: 455px;
+    }
+
+    .hero_cont {
+        width: 100%;
+    }
+
+    .hero .form-box {
+        width: 95%;
+    }
+
+    .aft_form {
+        margin: 0 auto;
+    }
+
+    .right_main {
+        width: 97%;    
+    }
+
+    .right_main div {
+        width: 100%;
+        text-align: center;
+    }
+
+    .service_btn {
         width: 100%;
     }
 
