--- a/assets/styles/responsive/media.css
+++ b/assets/styles/responsive/media.css
@@ -571,8 +571,14 @@
     }
 
     .right_main {
-        width: 97%;    
+        width: 97%;
+        height: 160px;    
     }
+
+    .right_main h6 {
+        margin-bottom: -20px;
+    }
+
 
     .right_main div {
         width: 100%;
@@ -581,6 +587,61 @@
 
     .service_btn {
         width: 100%;
+    }
+
+    .help_main {
+        width: 94%;
+        height: 270px;
+    }
+
+    .help_main div:nth-child(2) {
+        margin-bottom: 0px;
+    }
+
+    .priv_hd {
+        width: 90%;
+    }
+
+    .priv_cont {
+        width: 100%;
+    }
+
+    .priv_bd {
+        width: 94%;
+    }
+
+    .aft_quest {
+        width: 100%;
+        height: 170px;
+        padding: 7px;
+    }
+
+    .footer_pre {
+        height: auto;
+        flex-wrap: wrap;
+        gap: 15px;
+    }
+
+    .footer_form {
+        width: 100%;
+    }
+
+}
+
+/*
+=================================================================================
+    max width of 530px
+=================================================================================
+*/
+
+@media only screen and (max-width: 530px) {
+
+    .quest_bd {
+        width: 100%;
+    }
+
+    .quest_main {
+        width: 98%;
     }
 
 }
